--- a/BlazorBase-main/Pages/_Layout.cshtml
+++ b/BlazorBase-main/Pages/_Layout.cshtml
@@ -12,6 +12,10 @@
     <link href="css/site.css" rel="stylesheet" />
     <link href="BlazorBase.styles.css" rel="stylesheet" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
+    <link href="css/style.css" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css">
+<script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 </head>
 <body>
     @RenderBody()
