--- a/BlazorBase-main/Shared/MainLayout.razor
+++ b/BlazorBase-main/Shared/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@inherits LayoutComponentBase
+@* Import CSS file *@
 
 <PageTitle>BlazorBase</PageTitle>
 
@@ -8,10 +9,6 @@
     </div>
 
     <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
-
         <article class="content px-4">
             @Body
         </article>
