--- a/BlazorBase-main/Shared/NavMenu.razor
+++ b/BlazorBase-main/Shared/NavMenu.razor
@@ -1,31 +1,43 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">BlazorBase</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </div>
+﻿<div class="avatar-container d-flex justify-content-center align-items-center mt-5">
+    <img src="https://bt-component-netcore.cybersoft.edu.vn/assets/img/profile.jpg" alt="Avatar" class="avatar-img">
 </div>
 
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
+
+<div class="@NavMenuCssClass mt-5" @onclick="ToggleNavMenu">
     <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+        <div class="nav-item d-flex flex-column align-items-center px-3">
+            <NavLink class="nav-link fw-bold text-white" href="/about" Match="NavLinkMatch.All">
+                ABOUT
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+        <div class="nav-item d-flex flex-column align-items-center px-3">
+            <NavLink class="nav-link fw-bold text-white" href="/experience" Match="NavLinkMatch.All">
+                EXPERIENCE
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+        <div class="nav-item d-flex flex-column align-items-center px-3">
+            <NavLink class="nav-link fw-bold text-white" href="/education">
+                EDUCATION
+            </NavLink>
+        </div>
+        <div class="nav-item d-flex flex-column align-items-center px-3">
+            <NavLink class="nav-link fw-bold text-white" href="/skills">
+                SKILLS
+            </NavLink>
+        </div>
+        <div class="nav-item d-flex flex-column align-items-center px-3">
+            <NavLink class="nav-link fw-bold text-white" href="/interest">
+                INTERESTS
+            </NavLink>
+        </div>
+        <div class="nav-item d-flex flex-column align-items-center px-3">
+            <NavLink class="nav-link fw-bold text-white" href="/awards">
+                AWARDS
             </NavLink>
         </div>
     </nav>
 </div>
+
 
 @code {
     private bool collapseNavMenu = true;
